RESOLVED FIXED60386
[chromium]: Reland using WebPermissionClient for checking indexed db usage
https://bugs.webkit.org/show_bug.cgi?id=60386
Summary [chromium]: Reland using WebPermissionClient for checking indexed db usage
John Abd-El-Malek
Reported 2011-05-06 11:01:58 PDT
[chromium]: Reland using WebPermissionClient for checking indexed db usage
Attachments
Patch (3.24 KB, patch)
2011-05-06 11:02 PDT, John Abd-El-Malek
jamesr: review+
John Abd-El-Malek
Comment 1 2011-05-06 11:02:24 PDT
John Abd-El-Malek
Comment 2 2011-05-06 11:03:18 PDT
this relands r85919, with the fix being the usage of a local WebSecurityOrigin object. It turns out that I can't create two of them since the first one resets the PassRefPtr. This caused crashes in the chrome tests.
James Robinson
Comment 3 2011-05-06 12:08:13 PDT
Comment on attachment 92608 [details] Patch Aha! Yes, gotta prp that
John Abd-El-Malek
Comment 4 2011-05-06 12:10:18 PDT
Note You need to log in before you can comment on or make changes to this bug.