2011-05-06  John Abd-El-Malek  <jam@chromium.org>

Reviewed by James Robinson.

        [chromium]: Reland using WebPermissionClient for checking indexed db usage
        https://bugs.webkit.org/show_bug.cgi?id=60386

        * public/WebPermissionClient.h:
        (WebKit::WebPermissionClient::allowIndexedDB):
        * src/IDBFactoryBackendProxy.cpp:
        (WebKit::IDBFactoryBackendProxy::open):


git-svn-id: svn://svn.chromium.org/blink/trunk@85966 bbb929c8-8fbe-4397-9dbb-9b2b20218538